small fix + dark modeé

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,6 +7,7 @@
   --background: oklch(92.13% 0.0388 282.36);
   --secondary-background: oklch(100% 0 0);
   --foreground: oklch(0% 0 0);
+  --muted-foreground: oklch(34.07% 0.00004 271.152);
   --main-foreground: oklch(0% 0 0);
   --main: oklch(66.34% 0.1806 277.2);
   --border: oklch(0% 0 0);
@@ -25,6 +26,7 @@
   --background: oklch(26.58% 0.0737 283.96);
   --secondary-background: oklch(23.93% 0 0);
   --foreground: oklch(92.49% 0 0);
+  --muted-foreground: oklch(76.993% 0.00009 271.152);
   --main-foreground: oklch(0% 0 0);
   --main: oklch(66.34% 0.1806 277.2);
   --border: oklch(0% 0 0);
@@ -43,6 +45,7 @@
   --color-background: var(--background);
   --color-secondary-background: var(--secondary-background);
   --color-foreground: var(--foreground);
+  --color-muted-foreground: var(--muted-foreground);
   --color-main-foreground: var(--main-foreground);
   --color-border: var(--border);
   --color-overlay: var(--overlay);
